Fix wrong margin for star

--- a/Components/EventForMyPosts/EventForMyPosts.module.scss
+++ b/Components/EventForMyPosts/EventForMyPosts.module.scss
@@ -17,7 +17,7 @@
 }
 
 .star {
-  margin-top: 4px;
+  margin-top: 5px;
 }
 
 .starImage {
